--- a/wish.css
+++ b/wish.css
@@ -14,6 +14,7 @@ body{
     background-color: white;
     padding: 22px;
     box-shadow: 10px 10px 40px black;
+    position: relative;
 }
 .card{
     height: 400px;
@@ -21,6 +22,7 @@ body{
     border: 3px solid black;
     background-image: url('photo/balls.jpg');
     background-size: cover;
+    position: absolute;
 }
 #msg{
     font-weight: bolder;
@@ -65,4 +67,12 @@ body{
     text-indent: 100px;
     margin: 20px;
     font-family: 'Rouge Script', cursive;
+}
+@media(max-width: 768px){
+    body{
+        background-color: white;
+	background-image: none;
+        padding: 0;
+	padding-top:100px;	
+    }
 }
